--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   "homepage": "https://github.com/arwidt/timereport#readme",
   "devDependencies": {
     "mocha": "^2.4.4",
-    "performance-now": "^0.2.0"
   },
   "dependencies": {
-    "colors": "^1.1.2"
+    "colors": "^1.1.2",
+    "performance-now": "^0.2.0"
   }
 }
