--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/arwidt/timereport#readme",
   "devDependencies": {
-    "mocha": "^2.4.4",
+    "mocha": "^2.4.4"
   },
   "dependencies": {
     "colors": "^1.1.2",
