--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/arwidt/timereport#readme",
   "devDependencies": {
-    "mocha": "^2.4.4"
+    "lodash": "^4.5.0",
+    "mocha": "^2.4.4",
+    "should": "^8.2.2"
   },
   "dependencies": {
     "colors": "^1.1.2",
