--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "should": "^8.2.2"
   },
   "dependencies": {
-    "colors": "^1.1.2",
-    "performance-now": "^0.2.0"
+    "colors": "^1.1.2"
   }
 }
