--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "should": "^8.2.2"
   },
   "dependencies": {
-    "colors": "^1.1.2",
+    "chalk": "^1.1.3",
     "terminal-table-output": "^1.0.0"
   }
 }
