--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
   },
   "homepage": "https://github.com/arwidt/timereport#readme",
   "devDependencies": {
-    "lodash": "^4.5.0",
-    "mocha": "^2.4.4",
-    "should": "^8.2.2"
+    "lodash": "^4.13.1",
+    "mocha": "^2.5.3",
+    "should": "^9.0.2"
   },
   "dependencies": {
-    "chalk": "^1.1.3",
-    "terminal-table-output": "^1.0.0"
+    "chalk": "^1.1.3"
   }
 }
