--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arwidt/timereport",
-  "version": "2.0.0",
-  "description": "",
+  "version": "2.0.1",
+  "description": "Time our code and print out a graph to pinpoint where to optimize",
   "main": "index.js",
   "scripts": {
     "test": "jest"
